--- a/arch/arm64/configs/revpi-v8_defconfig
+++ b/arch/arm64/configs/revpi-v8_defconfig
@@ -7,7 +7,7 @@ CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_BPF_SYSCALL=y
 CONFIG_BPF_JIT=y
-CONFIG_PREEMPT=y
+CONFIG_PREEMPT_RT=y
 CONFIG_BSD_PROCESS_ACCT=y
 CONFIG_BSD_PROCESS_ACCT_V3=y
 CONFIG_TASKSTATS=y
@@ -455,6 +455,7 @@ CONFIG_DEVTMPFS_MOUNT=y
 # CONFIG_BRCMSTB_GISB_ARB is not set
 CONFIG_RASPBERRYPI_FIRMWARE=y
 # CONFIG_EFI_VARS_PSTORE is not set
+# CONFIG_EFI_DISABLE_RUNTIME is not set
 CONFIG_MTD=m
 CONFIG_MTD_BLOCK=m
 CONFIG_MTD_BLOCK2MTD=m
@@ -1352,7 +1353,6 @@ CONFIG_LEDS_TRIGGER_TIMER=y
 CONFIG_LEDS_TRIGGER_ONESHOT=y
 CONFIG_LEDS_TRIGGER_HEARTBEAT=y
 CONFIG_LEDS_TRIGGER_BACKLIGHT=y
-CONFIG_LEDS_TRIGGER_CPU=y
 CONFIG_LEDS_TRIGGER_DEFAULT_ON=y
 CONFIG_LEDS_TRIGGER_TRANSIENT=m
 CONFIG_LEDS_TRIGGER_CAMERA=m
