arm*/configs/revpi-*: Enable SECURITY_YAMA
Signed-off-by: Philipp Rosenberger <p.rosenberger@kunbus.com>

--- a/arch/arm64/configs/revpi-v8_defconfig
+++ b/arch/arm64/configs/revpi-v8_defconfig
@@ -1626,6 +1626,7 @@ CONFIG_DLM=m
 CONFIG_KEY_DH_OPERATIONS=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_APPARMOR=y
+CONFIG_SECURITY_YAMA=y
 CONFIG_LSM=""
 CONFIG_CRYPTO_USER=m
 CONFIG_CRYPTO_CRYPTD=m
