--- a/arch/arm/configs/revpi-v7l_defconfig
+++ b/arch/arm/configs/revpi-v7l_defconfig
@@ -1570,6 +1570,7 @@ CONFIG_DLM=m
 CONFIG_KEY_DH_OPERATIONS=y
 CONFIG_SECURITY=y
 CONFIG_SECURITY_APPARMOR=y
+CONFIG_SECURITY_YAMA=y
 CONFIG_LSM=""
 CONFIG_CRYPTO_USER=m
 CONFIG_CRYPTO_AES=m
