--- a/arch/arm/boot/dts/overlays/revpi-connect4-overlay.dts
+++ b/arch/arm/boot/dts/overlays/revpi-connect4-overlay.dts
@@ -286,6 +286,7 @@
 			pinctrl-0 = <&pb_uart_pins>;
 			status = "okay";
 			linux,rs485-enabled-at-boot-time;
+			rs485-term-gpios = <&expander_core 14 GPIO_ACTIVE_HIGH>;
 		};
 	};
 
