--- a/arch/arm/configs/revpi-v7l_defconfig
+++ b/arch/arm/configs/revpi-v7l_defconfig
@@ -1598,6 +1598,7 @@ CONFIG_DMA_CMA=y
 CONFIG_CMA_SIZE_MBYTES=5
 CONFIG_PRINTK_TIME=y
 CONFIG_BOOT_PRINTK_DELAY=y
+CONFIG_DEBUG_INFO_DWARF_TOOLCHAIN_DEFAULT=y
 CONFIG_MAGIC_SYSRQ_DEFAULT_ENABLE=0x1f6
 CONFIG_KGDB=y
 CONFIG_KGDB_KDB=y
