--- a/scripts/package/debian/rules
+++ b/scripts/package/debian/rules
@@ -5,6 +5,7 @@
 export DEB_RULES_REQUIRES_ROOT := no
 
 include debian/rules.vars
+include /usr/share/dpkg/pkg-info.mk
 
 ifneq (,$(filter-out parallel=1,$(filter parallel=%,$(DEB_BUILD_OPTIONS))))
     NUMJOBS = $(patsubst parallel=%,%,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
@@ -24,11 +25,13 @@ endif
 revision = $(lastword $(subst -, ,$(shell dpkg-parsechangelog -S Version)))
 CROSS_COMPILE ?= $(filter-out $(DEB_BUILD_GNU_TYPE)-, $(DEB_HOST_GNU_TYPE)-)
 make-opts = ARCH=$(ARCH) KERNELRELEASE=$(KERNELRELEASE) KBUILD_BUILD_VERSION=$(revision) $(addprefix CROSS_COMPILE=,$(CROSS_COMPILE))
+meta-pkg-append = $(subst linux,,$(DEB_SOURCE))
 
-binary-targets := $(addprefix binary-, image image-dbg headers libc-dev)
+binary-targets := $(addprefix binary-, image image-dbg image-meta headers libc-dev)
 
 all-packages = $(shell dh_listpackages)
-image-package = $(filter linux-image-% user-%, $(filter-out %-dbg, $(all-packages)))
+image-package = $(filter linux-image-% user-%, $(filter-out %-dbg %$(meta-pkg-append), $(all-packages)))
+image-meta-package = linux-image$(meta-pkg-append)
 image-dbg-package = $(filter %-dbg, $(all-packages))
 libc-dev-package = $(filter linux-libc-dev, $(all-packages))
 headers-package = $(filter linux-headers-%, $(all-packages))
