--- a/scripts/package/debian/rules
+++ b/scripts/package/debian/rules
@@ -27,14 +27,15 @@ CROSS_COMPILE ?= $(filter-out $(DEB_BUILD_GNU_TYPE)-, $(DEB_HOST_GNU_TYPE)-)
 make-opts = ARCH=$(ARCH) KERNELRELEASE=$(KERNELRELEASE) KBUILD_BUILD_VERSION=$(revision) $(addprefix CROSS_COMPILE=,$(CROSS_COMPILE))
 meta-pkg-append = $(subst linux,,$(DEB_SOURCE))
 
-binary-targets := $(addprefix binary-, image image-dbg image-meta headers libc-dev)
+binary-targets := $(addprefix binary-, image image-dbg image-meta headers headers-meta libc-dev)
 
 all-packages = $(shell dh_listpackages)
 image-package = $(filter linux-image-% user-%, $(filter-out %-dbg %$(meta-pkg-append), $(all-packages)))
 image-meta-package = linux-image$(meta-pkg-append)
 image-dbg-package = $(filter %-dbg, $(all-packages))
 libc-dev-package = $(filter linux-libc-dev, $(all-packages))
-headers-package = $(filter linux-headers-%, $(all-packages))
+headers-package = $(filter linux-headers-%, $(filter-out %$(meta-pkg-append), $(all-packages)))
+headers-meta-package = linux-headers$(meta-pkg-append)
 
 mk-files = $(patsubst binary-%,debian/%.files,$1)
 package = $($(@:binary-%=%-package))
