dts/core-2022: ks8851 reset gpio is active low
The reset gpio on the ksz8851 ethernet phy is active low. This was not noticed
with kernel 5.10, as the ks8851 driver used absolute values until commit
7b77bb5c ("net: ks8851: switch to using gpiod API").

This commit will fix the problem with RevPi Core S 1.1 and missing pileft /
piright interfaces on Kernel 6.1. On other devices this is not an issue, as
older Core and Connect are using a fixed regulator for reset.

Signed-off-by: Nicolai Buchwitz <n.buchwitz@kunbus.com>

--- a/arch/arm/boot/dts/overlays/revpi-core-2022-overlay.dts
+++ b/arch/arm/boot/dts/overlays/revpi-core-2022-overlay.dts
@@ -56,7 +56,7 @@
 				interrupt-parent = <&gpio>;
 				#interrupt-cells = <2>;
 				interrupts = <13 IRQ_TYPE_LEVEL_LOW>;
-				reset-gpios = <&gpio 21 GPIO_ACTIVE_HIGH>;
+				reset-gpios = <&gpio 21 GPIO_ACTIVE_LOW>;
 				status = "okay";
 			};
 
@@ -70,7 +70,7 @@
 				interrupt-parent = <&gpio>;
 				#interrupt-cells = <2>;
 				interrupts = <12 IRQ_TYPE_LEVEL_LOW>;
-				reset-gpios = <&gpio 20 GPIO_ACTIVE_HIGH>;
+				reset-gpios = <&gpio 20 GPIO_ACTIVE_LOW>;
 				status = "okay";
 			};
 		};
