arm*/configs/revpi-*: Enable DSA support in kernel
Enable DSA support by setting the proper configuration in the kernel.

Signed-off-by: Lino Sanfilippo <l.sanfilippo@kunbus.com>
Signed-off-by: Philipp Rosenberger <p.rosenberger@kunbus.com>

--- a/arch/arm/configs/revpi-v7l_defconfig
+++ b/arch/arm/configs/revpi-v7l_defconfig
@@ -330,6 +330,7 @@ CONFIG_L2TP_V3=y
 CONFIG_L2TP_IP=m
 CONFIG_L2TP_ETH=m
 CONFIG_BRIDGE=m
+CONFIG_NET_DSA=m
 CONFIG_VLAN_8021Q=m
 CONFIG_VLAN_8021Q_GVRP=y
 CONFIG_ATALK=m
@@ -495,6 +496,8 @@ CONFIG_NETCONSOLE=m
 CONFIG_TUN=m
 CONFIG_VETH=m
 CONFIG_NET_VRF=m
+CONFIG_NET_DSA_MICROCHIP_KSZ_COMMON=m
+CONFIG_NET_DSA_MICROCHIP_KSZ_SPI=m
 CONFIG_BCMGENET=y
 CONFIG_IGB=m
 CONFIG_IXGBE=m
