--- a/arch/arm64/configs/revpi-v8_defconfig
+++ b/arch/arm64/configs/revpi-v8_defconfig
@@ -342,6 +342,7 @@ CONFIG_L2TP_IP=m
 CONFIG_L2TP_ETH=m
 CONFIG_BRIDGE=m
 CONFIG_BRIDGE_VLAN_FILTERING=y
+CONFIG_NET_DSA=m
 CONFIG_VLAN_8021Q=m
 CONFIG_VLAN_8021Q_GVRP=y
 CONFIG_ATALK=m
@@ -516,6 +517,8 @@ CONFIG_TUN=m
 CONFIG_VETH=m
 CONFIG_NET_VRF=m
 CONFIG_VSOCKMON=m
+CONFIG_NET_DSA_MICROCHIP_KSZ_COMMON=m
+CONFIG_NET_DSA_MICROCHIP_KSZ_SPI=m
 CONFIG_BCMGENET=y
 CONFIG_MACB=y
 CONFIG_IGB=m
