--- a/arch/arm/boot/dts/overlays/revpi-flat-s-2022-overlay.dts
+++ b/arch/arm/boot/dts/overlays/revpi-flat-s-2022-overlay.dts
@@ -254,19 +254,51 @@
 			};
 
 			ksz8795: switch@1 {
-				// TODO: use DSA?
 				compatible = "microchip,ksz8795";
 				pinctrl-names = "default";
 				pinctrl-0 = <&switch_irq_pins>;
-				// NOTE: reduce this if device is not working properly
-				spi-max-frequency = <20000000>;
+				spi-max-frequency = <2000000>;
 				reg = <1>;
 				spi-cpha;
 				spi-cpol;
 				interrupt-parent = <&gpio>;
 				#interrupt-cells = <2>;
 				interrupts = <44 IRQ_TYPE_LEVEL_LOW>;
-				status = "okay";
+				status = "disabled";
+
+				ports {
+					#address-cells = <1>;
+					#size-cells = <0>;
+					/*
+					 * Use the reverse port order for naming
+					 * to have port swp1 physically next to
+					 * eth0 on the RevPi Flat.
+					 */
+					port@1 {
+						reg = <1>;
+						label = "swp3";
+					};
+					port@2 {
+						reg = <2>;
+						label = "swp2";
+					};
+					port@3 {
+						reg = <3>;
+						label = "swp1";
+					};
+					port@4 {
+						reg = <4>;
+						label = "cpu";
+						phy-mode = "rgmii";
+						rx-internal-delay-ps = <2000>;
+						tx-internal-delay-ps = <2000>;
+						ethernet = <&eth1>;
+						fixed-link {
+							speed = <1000>;
+							full-duplex;
+						};
+					};
+				};
 			};
 		};
 	};
