--- a/arch/arm/boot/dts/overlays/Makefile
+++ b/arch/arm/boot/dts/overlays/Makefile
@@ -226,6 +226,7 @@ dtbo-$(CONFIG_ARCH_BCM2835) += \
 	revpi-connect-se.dtbo \
 	revpi-connect-se-dt-blob.dtbo \
 	revpi-connect4.dtbo \
+	revpi-connect5.dtbo \
 	revpi-con-can.dtbo \
 	revpi-flat.dtbo \
 	revpi-flat-s-2022.dtbo \
