dts/connect5: Add rtc (PCF2131) to i2c1
Signed-off-by: Philipp Rosenberger <p.rosenberger@kunbus.com>

--- a/arch/arm/boot/dts/overlays/revpi-connect5-overlay.dts
+++ b/arch/arm/boot/dts/overlays/revpi-connect5-overlay.dts
@@ -268,6 +268,14 @@
 					"-", // GPIO22 / P2_6
 					"PG_1V05"; // GPIO23 / P2_7
 			};
+
+			rtc: rtc@53 {
+				/* 100kHz, 400kHz */
+				compatible = "nxp,pcf2131";
+				reg = <0x53>;
+				reset-source;
+				status = "okay";
+			};
 		};
 	};
 };
