--- a/arch/arm/boot/dts/overlays/revpi-connect5-overlay.dts
+++ b/arch/arm/boot/dts/overlays/revpi-connect5-overlay.dts
@@ -173,6 +173,18 @@
 				pins = "gpio2", "gpio3";
 				bias-disable;
 			};
+			con5_spi1_pins: con5_spi1_pins {
+				/* MISO, MOSI, CLK */
+				function = "spi1";
+				pins = "gpio19", "gpio20", "gpio21";
+				bias-disable;
+			};
+			con5_spi1_cs_pins: con5_spi1_cs_pins {
+				/* CE0 (TPM), CE1 (CAN) */
+				function = "gpio";
+				pins = "gpio18", "gpio11";
+				bias-disable;
+			};
 			exp_core_pins: exp_core_pins {
 				/* IRQ */
 				function = "gpio";
@@ -184,6 +196,12 @@
 				function = "gpio";
 				pins = "gpio9";
 				bias-disable;
+			};
+			tpm_pins: tpm_pins {
+				/* IRQ */
+				function = "gpio";
+				pins = "gpio10";
+				bias-disabled;
 			};
 		};
 	};
@@ -283,6 +301,29 @@
 		target = <&rpi_rtc>;
 		__overlay__ {
 			status = "disabled";
+		};
+	};
+
+	/* SPI1 */
+	fragment@4 {
+		target = <&spi1>;
+		__overlay__ {
+			pinctrl-names = "default";
+			pinctrl-0 = <&con5_spi1_pins>, <&con5_spi1_cs_pins>;
+			cs-gpios = <&gpio 18 GPIO_ACTIVE_LOW>, <&gpio 11 GPIO_ACTIVE_LOW>;
+			status = "okay";
+
+			tpm: tpm@0 {
+				compatible = "infineon,slb9670";
+				pinctrl-names = "default";
+				pinctrl-0 = <&tpm_pins>;
+				reg = <0>;
+				spi-max-frequency = <1000000>;
+				interrupt-parent = <&gpio>;
+				#interrupt-cells = <2>;
+				interrupts = <10 IRQ_TYPE_LEVEL_LOW>;
+				status = "okay";
+			};
 		};
 	};
 };
