dts/connect5: Swap LED mode of SoC Ethernet
Existing RevPi products use a green LED to signify link presence and an
amber LED to signify activity.

See df15a0fd291d ("ARM: dts: revpi-connect4: Swap LED mode of SoC
Ethernet") for details.

Signed-off-by: Philipp Rosenberger <p.rosenberger@kunbus.com>

--- a/arch/arm/boot/dts/overlays/revpi-connect5-overlay.dts
+++ b/arch/arm/boot/dts/overlays/revpi-connect5-overlay.dts
@@ -378,4 +378,13 @@
 			status = "okay";
 		};
 	};
+
+	/* PHY1 (SoC Ethernet) */
+	fragment@7 {
+		target = <&phy1>;
+		__overlay__ {
+			/* Link Speed/Activity */
+			led-modes = <0x08 0x00>;
+		};
+	};
 };
