ci: Run builds on arm64 runner
Signed-off-by: Nicolai Buchwitz <n.buchwitz@kunbus.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,7 +46,7 @@ build-kernel:
     entrypoint: [""]
   tags:
     - self-hosted
-    - host-amd64
+    - host-arm64
     - docker
   variables:
     BUILD_NUMBER: $CI_PIPELINE_IID
