--- a/arch/arm/boot/dts/overlays/revpi-connect4-overlay.dts
+++ b/arch/arm/boot/dts/overlays/revpi-connect4-overlay.dts
@@ -1,4 +1,6 @@
 // SPDX-License-Identifier: GPL-2.0-only
+// SPDX-FileCopyrightText: Copyright 2022-2023 KUNBUS GmbH
+
 /dts-v1/;
 /plugin/;
 #include <dt-bindings/gpio/gpio.h>
