dts: Add overlay for RevPi HAT EEPROM (CM5)
Add an overlay to make the RevPi HAT EEPROM available. The HAT is attached
via I2C (GPIOs 0 and 1) and when loaded the overlay creates the entry
/sys/bus/i2c/devices/0-0050/eeprom over which the EEPROM can be accessed.

Signed-off-by: Lino Sanfilippo <l.sanfilippo@kunbus.com>

--- a/arch/arm/boot/dts/overlays/Makefile
+++ b/arch/arm/boot/dts/overlays/Makefile
@@ -235,6 +235,7 @@ dtbo-$(CONFIG_ARCH_BCM2835) += \
 	revpi-flat-s-2022-dsa.dtbo \
 	revpi-flat-dt-blob.dtbo \
 	revpi-hat-eeprom.dtbo \
+	revpi-hat-eeprom-pi5.dtbo \
 	revpi-core.dtbo \
 	revpi-core-cm1.dtbo \
 	revpi-core-dt-blob.dtbo \
