--- a/arch/arm/boot/dts/overlays/Makefile
+++ b/arch/arm/boot/dts/overlays/Makefile
@@ -228,6 +228,7 @@ dtbo-$(CONFIG_ARCH_BCM2835) += \
 	revpi-connect4.dtbo \
 	revpi-connect5.dtbo \
 	revpi-connect5-can.dtbo \
+	revpi-connect5-can-can.dtbo \
 	revpi-con-can.dtbo \
 	revpi-flat.dtbo \
 	revpi-flat-s-2022.dtbo \
