dts/connect5: add GPIOs for PiBridge gigabit ethernet
The connect 5 supports the connection of one gigabit ethernet adapter on
one or both sides of the PiBridge instead of IO-modules. For this reason it
provides 2 GPIOs for each side:

1. a detection pin which allows to determine if any IO-modules are
   connected
2. a multiplex pin that can be used to switch between IO-module and gigabit
   ethernet support.

Add these GPIOs to the pibridge node and thus make it available for
piControl by reading the device tree.

Signed-off-by: Lino Sanfilippo <l.sanfilippo@kunbus.com>

--- a/arch/arm/boot/dts/overlays/revpi-connect5-overlay.dts
+++ b/arch/arm/boot/dts/overlays/revpi-connect5-overlay.dts
@@ -108,6 +108,14 @@
 				/* Sniff pins 1B and 2B */
 				right-sniff-gpios = <&exp_gpio_power 14 GPIO_ACTIVE_HIGH>,
 						   <&exp_gpio_power 15 GPIO_ACTIVE_HIGH>;
+
+				/* Left multiplex, detection pin */
+				left-pbswitch-gpios = <&exp_gpio_core 10 GPIO_ACTIVE_HIGH>,
+						      <&exp_gpio_core 15 GPIO_ACTIVE_HIGH>;
+
+				/* Right multiplex, detection pin */
+				right-pbswitch-gpios = <&exp_gpio_power 3 GPIO_ACTIVE_HIGH>,
+						       <&exp_gpio_power 5 GPIO_ACTIVE_HIGH>;
 			};
 		};
 	};
