--- a/arch/arm/boot/dts/overlays/revpi-connect5-can-can-overlay.dts
+++ b/arch/arm/boot/dts/overlays/revpi-connect5-can-can-overlay.dts
@@ -155,7 +155,7 @@
 				*/
 				spi-max-frequency = <8500000>;
 				interrupts-extended = <&gpio 25 IRQ_TYPE_LEVEL_LOW>;
-				termination-gpios = <&exp_gpio_core 16 GPIO_ACTIVE_HIGH>;
+				termination-gpios = <&exp_gpio_power 4 GPIO_ACTIVE_HIGH>;
 				termination-ohms = <120>;
 			};
 		};
