package: debian: strip headers package
The linux-headers package contains unstripped binaries because it isn't
stripped. Lintian complains about this:

    E: linux-headers-6.6.0-revpi0-rpi-v8: unstripped-binary-or-object [usr/src/linux-headers-6.6.0-revpi0-rpi-v8/scripts/asn1_compiler]
    E: linux-headers-6.6.0-revpi0-rpi-v8: unstripped-binary-or-object [usr/src/linux-headers-6.6.0-revpi0-rpi-v8/scripts/basic/fixdep]
    E: linux-headers-6.6.0-revpi0-rpi-v8: unstripped-binary-or-object [usr/src/linux-headers-6.6.0-revpi0-rpi-v8/scripts/dtc/dtc]
    E: linux-headers-6.6.0-revpi0-rpi-v8: unstripped-binary-or-object [usr/src/linux-headers-6.6.0-revpi0-rpi-v8/scripts/dtc/fdtoverlay]
    E: linux-headers-6.6.0-revpi0-rpi-v8: unstripped-binary-or-object [usr/src/linux-headers-6.6.0-revpi0-rpi-v8/scripts/genksyms/genksyms]
    E: linux-headers-6.6.0-revpi0-rpi-v8: unstripped-binary-or-object [usr/src/linux-headers-6.6.0-revpi0-rpi-v8/scripts/kallsyms]
    E: linux-headers-6.6.0-revpi0-rpi-v8: unstripped-binary-or-object [usr/src/linux-headers-6.6.0-revpi0-rpi-v8/scripts/kconfig/conf]
    E: linux-headers-6.6.0-revpi0-rpi-v8: unstripped-binary-or-object [usr/src/linux-headers-6.6.0-revpi0-rpi-v8/scripts/mod/mk_elfconfig]
    E: linux-headers-6.6.0-revpi0-rpi-v8: unstripped-binary-or-object [usr/src/linux-headers-6.6.0-revpi0-rpi-v8/scripts/mod/modpost]
    E: linux-headers-6.6.0-revpi0-rpi-v8: unstripped-binary-or-object [usr/src/linux-headers-6.6.0-revpi0-rpi-v8/scripts/sorttable]
    E: linux-headers-6.6.0-revpi0-rpi-v8: unstripped-binary-or-object [usr/src/linux-headers-6.6.0-revpi0-rpi-v8/scripts/unifdef]

It's not possible to outright strip every package built with
"debian/rules" as, for instance, the "binary-image" target shouldn't be
stripped because it contains debug information that the
"binary-image-dbg" target will make use of.

Thus conditionally use "dh_strip" on the "binary-headers" target after
using "dh_builddeb" to strip only the contents of the package l

--- a/scripts/package/debian/rules
+++ b/scripts/package/debian/rules
@@ -50,6 +50,8 @@ define binary
 	$(Q)dh_testroot $(DH_OPTIONS)
 	$(Q)dh_prep $(DH_OPTIONS)
 	$(Q)+$(MAKE) $(make-opts) run-command KBUILD_RUN_COMMAND='+$$(srctree)/scripts/package/builddeb $(package)'
+	$(if $(filter-out %$(meta-pkg-append),$(filter linux-headers-%,$(package))),\
+		$(Q)dh_strip $(DH_OPTIONS) --no-automatic-dbgsym)
 	$(Q)dh_installdocs $(DH_OPTIONS)
 	$(Q)dh_installchangelogs $(DH_OPTIONS)
 	$(Q)dh_compress $(DH_OPTIONS)
