--- a/arch/arm/boot/dts/overlays/revpi-connect5-overlay.dts
+++ b/arch/arm/boot/dts/overlays/revpi-connect5-overlay.dts
@@ -109,12 +109,18 @@
 				right-sniff-gpios = <&exp_gpio_power 14 GPIO_ACTIVE_HIGH>,
 						   <&exp_gpio_power 15 GPIO_ACTIVE_HIGH>;
 
-				/* Left multiplex, detection pin */
-				left-pbswitch-gpios = <&exp_gpio_core 10 GPIO_ACTIVE_HIGH>,
+				/*
+				 * Left multiplexer (swapped input pins thus active low),
+				 * Module detection pin
+				 */
+				left-pbswitch-gpios = <&exp_gpio_core 10 GPIO_ACTIVE_LOW>,
 						      <&exp_gpio_core 15 GPIO_ACTIVE_HIGH>;
 
-				/* Right multiplex, detection pin */
-				right-pbswitch-gpios = <&exp_gpio_power 3 GPIO_ACTIVE_HIGH>,
+				/*
+				 * Right multiplexer (swapped input pins thus active low),
+				 * Module detection pin
+				 */
+				right-pbswitch-gpios = <&exp_gpio_power 3 GPIO_ACTIVE_LOW>,
 						       <&exp_gpio_power 5 GPIO_ACTIVE_HIGH>;
 			};
 		};
