dts/overlay_map: Make revpi-eeprom conditionally
Choose the correct overlay for revpi-eeprom based on soc, so the user
do not need to remember the correct overlay for it's platform.

dtoverlay=revpi-eeprom will load revpi-eeprom-pi5 on bcm2712 and
revpi-eeprom on bcm2711. Other platforms will issue an error.

Signed-off-by: Nicolai Buchwitz <nb@tipi-net.de>

--- a/arch/arm/boot/dts/overlays/overlay_map.dts
+++ b/arch/arm/boot/dts/overlays/overlay_map.dts
@@ -239,6 +239,11 @@
 		bcm2711;
 	};
 
+	revpi-hat-eeprom {
+		bcm2711;
+		bcm2712 = "revpi-hat-eeprom-pi5";
+	};
+
 	rpi-cirrus-wm5102 {
 		renamed = "cirrus-wm5102";
 	};
