dts/connect5: Use RC MSI target instead of MSI-MIP
The MSI-MIP peripheral provides a maximum of 8 vectors. This is not
enough for more than one LAN7430 downstream device. Thus the remaining
two devices will run with legacy interrupts.

Fix this and revert to the MSI target in the RC, instead of using the
MSI-MIP peripheral. DT changes are taken from RPi's
pciex1-compat-pi5-overlay.dts.

While at it make sure that the pcie1 interface is activated instead of
rely on some bootloader magic.

Signed-off-by: Nicolai Buchwitz <n.buchwitz@kunbus.com>

--- a/arch/arm/boot/dts/overlays/revpi-connect5-overlay.dts
+++ b/arch/arm/boot/dts/overlays/revpi-connect5-overlay.dts
@@ -401,4 +401,14 @@
 			led-modes = <0x08 0x00>;
 		};
 	};
+
+	/* PCIe x1 interface */
+	fragment@8 {
+		target = <&pciex1>;
+		__overlay__ {
+			/* Use RC MSI target instead of MIP MSIx target */
+			msi-parent = <&pciex1>;
+			status = "okay";
+		};
+	};
 };
