dts/connect5: Disable ASPM
Disable PCIe Active-State Power Management (ASPM) as the combination of
the Pericom PCIe switch and the downstream LAN7430 often fails with
unsupported register issues, when the first controller idles.

Signed-off-by: Nicolai Buchwitz <n.buchwitz@kunbus.com>

--- a/arch/arm/boot/dts/overlays/revpi-connect5-overlay.dts
+++ b/arch/arm/boot/dts/overlays/revpi-connect5-overlay.dts
@@ -411,4 +411,12 @@
 			status = "okay";
 		};
 	};
+
+	/* Disable ASPM due to link errors with first downstream ethernet controller */
+	fragment@9 {
+		target = <&chosen>;
+		__overlay__ {
+			bootargs = "pcie_aspm=off";
+		};
+	};
 };
