dts: connect4: Enable bootloader eeprom update
Enable spi0 on gpio 40-43 in order to support inplace update of the
bootloader eeprom with flashrom and rpi-eeprom-update.

Signed-off-by: Nicolai Buchwitz <n.buchwitz@kunbus.com>

--- a/arch/arm/boot/dts/overlays/revpi-connect4-overlay.dts
+++ b/arch/arm/boot/dts/overlays/revpi-connect4-overlay.dts
@@ -334,4 +334,34 @@
 			led-modes = <0x08 0x00>;
 		};
 	};
+
+	/*
+	 * Enable spi0 on 40-43 in order to support bootloader
+	 * eeprom update with rpi-eeprom-update.
+	 */
+	fragment@10 {
+		target = <&spi0>;
+		__overlay__ {
+			cs-gpios = <&gpio 43 1>;
+			status = "okay";
+		};
+	};
+
+	fragment@11 {
+		target = <&spi0_cs_pins>;
+		__overlay__ {
+			brcm,pins = <43>;
+			brcm,function = <1>; /* output */
+			status = "okay";
+		};
+	};
+
+	fragment@12 {
+		target = <&spi0_pins>;
+		__overlay__ {
+			brcm,pins = <40 41 42>;
+			brcm,function = <3>; /* alt4 */
+			status = "okay";
+		};
+	};
 };
