dts: connect4/flat-s: Add spi0 for eeprom update
Enable spi0 on gpio 40-43 in order to support inplace update of the
bootloader eeprom with flashrom and rpi-eeprom-update.

Signed-off-by: Nicolai Buchwitz <n.buchwitz@kunbus.com>

--- a/arch/arm/boot/dts/overlays/revpi-flat-s-2022-overlay.dts
+++ b/arch/arm/boot/dts/overlays/revpi-flat-s-2022-overlay.dts
@@ -456,6 +456,36 @@
 		};
 	};
 
+	/*
+	 * Enable spi0 on 40-43 in order to support bootloader
+	 * eeprom update with rpi-eeprom-update.
+	 */
+	fragment@13 {
+		target = <&spi0>;
+		__overlay__ {
+			cs-gpios = <&gpio 43 1>;
+			status = "okay";
+		};
+	};
+
+	fragment@14 {
+		target = <&spi0_cs_pins>;
+		__overlay__ {
+			brcm,pins = <43>;
+			brcm,function = <1>; /* output */
+			status = "okay";
+		};
+	};
+
+	fragment@15 {
+		target = <&spi0_pins>;
+		__overlay__ {
+			brcm,pins = <40 41 42>;
+			brcm,function = <3>; /* alt4 */
+			status = "okay";
+		};
+	};
+
 	__overrides__ {
 		bootargs = <&chosen_overlay>,"bootargs";
 		dsa = <&ksz8795>,"status=okay";
