--- a/arch/arm64/configs/revpi-v8_defconfig
+++ b/arch/arm64/configs/revpi-v8_defconfig
@@ -734,7 +734,7 @@ CONFIG_I2C_MUX_PCA954x=m
 CONFIG_I2C_MUX_PINCTRL=m
 CONFIG_I2C_BCM2708=y
 CONFIG_I2C_BCM2835=y
-CONFIG_I2C_BRCMSTB=m
+CONFIG_I2C_BRCMSTB=y
 CONFIG_I2C_DESIGNWARE_PLATFORM=m
 CONFIG_I2C_GPIO=m
 CONFIG_I2C_ROBOTFUZZ_OSIF=m
